test/libsolidity/syntaxTests/inlineAssembly/for_expr_invalid_4.sol
contract C {
    function f() public pure {
        assembly {
            for {} 1 {} 1
        }
    }
}
// ----
// ParserError 2314: (87-88): Expected '{' but got 'Number'
